add image in left and right

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <section>
         <div class="container">
             <div id="left_card">
-                <img src="https://cdn-icons-png.flaticon.com/512/686/686751.png" alt="">    
+                <img src="img/four-icon-bg.png" alt="">    
             </div>
             <div id="card_list">
                 <!-- genareted  by javascripts -->
             </div>
             <div id="rightCard">
                 <div class="card">
-                    <img src="https://cdn-icons-png.flaticon.com/512/686/686751.png" alt="">
+                    <img src="img/star-bg.png" alt="">
                 </div>
                 <div class="card">
-                    <img src="https://cdn-icons-png.flaticon.com/512/686/686751.png" alt="">
+                    <img src="img/timer-bg.png" alt="">
                 </div>
                 <div class="card">
-                    <img src="https://cdn-icons-png.flaticon.com/512/686/686751.png" alt="">
+                    <img src="img/card-list-bg.png" alt="">
                 </div>
             </div>
         </div>
