data, timmer added with conflict

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <div class="card">
                     <img src="img/star-bg.png" alt="">
                 </div>
-                <div class="card">
-                    <img src="img/timer-bg.png" alt="">
+                <div class="timmer">
+                    <p>00:00</p>
                 </div>
                 <div class="card">
                     <img src="img/card-list-bg.png" alt="">
@@ -30,6 +30,10 @@
         </div>
     </section>
 
+    <h3>Hellow saddam</h3>
+    <button onclick = "setTimeout(delayFunction, 4000)">Click Here</button>
+
     <script src="js/script.js"></script>
+    <script src="js/arrayMap.js"></script>
 </body>
 </html>
