16 card genaret and style

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                 <!-- genareted  by javascripts -->
             </div>
             <div id="rightCard">
-                <div class="card">
-                    <img src="img/star-bg.png" alt="">
+                <div class="incressCount">
+                    <p>0</p>  
                 </div>
                 <div class="timmer">
                     <p>00:00</p>
                 </div>
-                <div class="card">
-                    <img src="img/card-list-bg.png" alt="">
+                <div class="discressCount">
+                    <p class="discress">48</p>
                 </div>
             </div>
         </div>
