js file break into module

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         </div>
     </section>
 
-    <script src="js/script.js"></script>
-    <script src="js/arrayMap.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
