card store handler added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div id="rightCard">
                     <!-- select card  -->
-                    <div class="randomCard">
+                    <div class="selectCardCounter">
                         <img
                             src="img/cardList/blue-circle-dot.png"
                             alt="random card image"
@@ -33,8 +33,8 @@
                         <p>00:00</p>
                     </div>
                     <!-- cart list  -->
-                    <div class="discressCount">
-                        <p class="discress">48</p>
+                    <div class="cardStore">
+                        <p class="discress"></p>
                     </div>
                 </div>
             </div>
