game generator complete

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                     <!-- select card  -->
                     <div class="selectCardCounter">
                         <img
-                            src="img/cardList/blue-circle-dot.png"
+                            src="img/loading.gif"
                             alt="random card image"
                         />
                     </div>
                     <!-- point  -->
-                    <div class="incressCount">
+                    <div class="gamePoint">
                         <p>0</p>
                     </div>
                     <!-- timer  -->
