start and complete message added

--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
     </head>
     <body>
         <section>
-            <div class="container">
+            <div class="container start ">
                 <div id="left_card">
                     <img src="img/four-icon-bg.png" alt="" />
                 </div>
                 <div id="card_list">
                     <!-- genareted  by javascripts -->
+                    <!-- complete message  -->
+                    <div class="complete-msg">
+                        <h1>Congratulation!</h1>
+                        <p>You have completed the game successfully</p>
+                        <div class=" game-details">
+                            <p>Time: <span>5</span></p>
+                            <p>Point: <span>0</span></p>
+                        </div>
+                    </div>
+                    <div class="start-msg">
+                        <p>To start the game Please click on the</p>
+                        <h1>Start Btn</h1>
+                    </div>
                 </div>
                 <div id="rightCard">
                     <!-- select card  -->
