game start, continue, complete message and state added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <section>
-            <div class="container start ">
+        <section id="game-wrap" class=" ">
+            <div class="container">
                 <div id="left_card">
                     <img src="img/four-icon-bg.png" alt="" />
                 </div>
@@ -26,7 +26,9 @@
                     </div>
                     <div class="start-msg">
                         <p>To start the game Please click on the</p>
-                        <h1>Start Btn</h1>
+                        <button id="msgStartBtn">
+                            <img src="./img/play.png" alt="">
+                        </button>
                     </div>
                 </div>
                 <div id="rightCard">
