complete and game point , time added in complete message

--- a/index.html
+++ b/index.html
@@ -19,25 +19,19 @@
                     <div class="complete-msg">
                         <h1>Congratulation!</h1>
                         <p>You have completed the game successfully</p>
-                        <div class=" game-details">
-                            <p>Time: <span>5</span></p>
-                            <p>Point: <span>0</span></p>
-                        </div>
+                        <p class="game-details"></p>
                     </div>
                     <div class="start-msg">
                         <p>To start the game Please click on the</p>
                         <button id="msgStartBtn">
-                            <img src="./img/play.png" alt="">
+                            <img src="./img/play.png" alt="" />
                         </button>
                     </div>
                 </div>
                 <div id="rightCard">
                     <!-- select card  -->
                     <div class="selectCardCounter">
-                        <img
-                            src="img/loading.gif"
-                            alt="random card image"
-                        />
+                        <img src="img/loading.gif" alt="random card image" />
                     </div>
                     <!-- point  -->
                     <div class="gamePoint">
