notice and table look updated

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <section id="game-wrap" class=" ">
+            <h4 class=" notice">Click on each card, If match you will get point. </h4>
             <div class="container">
                 <div id="left_card">
                     <img src="img/four-icon-bg.png" alt="" />
